[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/main_menu_illustration.png" type="Texture" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://sounds/tracks/title_intro.wav" type="AudioStream" id=3]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -100.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 924.0
margin_bottom = 600.0
size_flags_horizontal = 3
alignment = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 831.0
margin_bottom = 600.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 835.0
margin_right = 924.0
margin_bottom = 600.0
alignment = 1

[node name="Play" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 89.0
margin_bottom = 286.0
text = "Play Game"

[node name="Instructions" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 290.0
margin_right = 89.0
margin_bottom = 310.0
text = "Instructions"

[node name="Credits" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 314.0
margin_right = 89.0
margin_bottom = 334.0
text = "Credits"

[node name="title" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
